<resources>
    <string name="app_name">WatHub</string>
    <string name="api_home">Home</string>
    <string name="api_foodservices">Food Services</string>
    <string name="api_watcard">WatCard</string>
    <string name="api_courses">Courses</string>
    <string name="api_ci">Campus Information</string>
    <string name="api_maps">Maps</string>
    <string name="api_campus">Campus</string>
    <string name="api_events">Events</string>
    <string name="api_news">News</string>
    <string name="api_weather">Weather</string>
    <string name="api_resources">Resources</string>
    <string name="weather_last_updated">Last updated at %1$s %2$s</string>
    <string name="weather_north_symbol">N</string>
    <string name="weather_wind">%1$s kph %2$s</string>
    <string name="weather_precipitation">%1$.1f mm</string>
    <string name="weather_precipitation_none">No precipitation</string>
    <string name="weather_precipitation_period">in last 24h</string>
    <string name="weather_pressure">%1$.1f kPa</string>
    <string name="weather_author_attribution">%1$s\nPhoto taken by %2$s</string>
    <string name="title_foodservices_announcements">Announcements</string>
    <string name="title_foodservices_locations">Locations</string>
    <string name="title_foodservices_menus">Menus</string>
    <string name="title_foodservices_notes">Notes</string>
    <string name="title_foodservices_watcard">WatCard Vendors</string>
    <string name="title_watcard_balance">WatCard Balance</string>
    <string name="title_weather">Weather</string>
    <string name="title_buildings">Buildings</string>
    <string name="title_courses">Courses</string>
    <string name="title_resources_sites">Sites</string>
    <string name="title_resources_goosewatch">Goose Watch</string>
    <string name="title_resources_sunshine">Sunshine List</string>
    <string name="title_events">Events</string>
    <string name="title_news">News</string>
    <string name="title_parking">Parking</string>
    <string name="title_poi">Points Of Interest</string>
    <string name="title_open_classrooms">Open Classrooms</string>
    <string name="title_reddit">Reddit</string>
    <string name="title_uwaterloo_subreddit">r/uwaterloo</string>
    <string name="title_important_dates">Important Dates</string>
    <string name="description_foodservices_announcements">Additional announcements regarding food being served at various places on campus.</string>
    <string name="description_foodservices_locations">Places serving food and beverages on campus, including operating hours and detailed outlet information.</string>
    <string name="description_foodservices_menus">Lunch and dinner menus of places serving food on campus for each day of the week.</string>
    <string name="description_foodservices_notes">Additional notes regarding food being served at various places on campus.</string>
    <string name="description_foodservices_watcard">Places on and off campus that accept WatCard as a form of payment.</string>
    <string name="description_watcard_balance">Check your WatCard balances for meal plans, Flex dollars, and more.</string>
    <string name="description_weather">Current weather details from the University of Waterloo Weather Station.</string>
    <string name="description_buildings">A list of official buildings affiliated with the University of Waterloo.</string>
    <string name="description_courses">Information about courses offered, including general info, prerequisites, course schedules, enrollment info, and exam schedules</string>
    <string name="description_resources_sites">A list of official websites affiliated with the University of Waterloo.</string>
    <string name="description_resources_goosewatch">A crowd-sourced list of geese nests.</string>
    <string name="description_resources_sunshine">High-earning University of Waterloo public employees.</string>
    <string name="description_events">Information regarding events taking place around campus.</string>
    <string name="description_news">News curated by various sources affiliated with the University of Waterloo.</string>
    <string name="description_parking">Real-time parking counts in select parking lots across campus.</string>
    <string name="description_poi">ATMs, libraries, and other interesting places and things to see across campus.</string>
    <string name="description_open_classrooms">Free, unused classrooms on campus for studying or hosting events.</string>
    <string name="description_reddit">Student and alumni-run r/uwaterloo subreddit for the UW community.</string>
    <string name="description_important_dates">Course Add/Drop, Tuition Deadlines, and other essential dates for your uWaterloo term.</string>
    <string name="home_quick_course_lookup">Course Lookup</string>
    <string name="home_quick_course_hint_subject_example">Ex. MATH</string>
    <string name="home_quick_course_hint_subject">MATH</string>
    <string name="home_quick_course_hint_number">135</string>
    <string name="home_quick_course_search_subject">Search all %s courses …</string>
    <string name="home_quick_course_search_course">Look up %s…</string>
    <string name="home_quick_weather">Check the weather</string>
    <string name="home_quick_see_more">See more …</string>
    <string name="nearby_locations_title">Nearby Food Locations</string>
    <string name="nearby_locations_see_all">See All</string>
    <string name="nearby_locations_none">Nothing open near you</string>
    <string name="nearby_locations_waiting">Waiting…</string>
    <string name="nearby_locations_permission">Click here to grant permission to locate nearby food spots!</string>
    <string name="nearby_locations_error_availability">Location is not available.</string>
    <string name="foodservices_announcements_none">No Announcements :(</string>
    <string name="foodservices_location_hours">Hours</string>
    <string name="foodservices_location_hours_closed">Closed</string>
    <string name="foodservices_location_all">All</string>
    <string name="foodservices_location_open_now">Open Now</string>
    <string name="foodservices_location_closed_now">Closed Now</string>
    <string name="foodservices_location_closes_at">Closes at %s</string>
    <string name="foodservices_location_tim_hortons">"Tim Hortons   ☕️"</string>
    <string name="foodservices_location_special_hours">Special Hours</string>
    <string name="foodservices_location_directions">Directions</string>
    <string name="foodservices_notes_none">No Notes :(</string>
    <string name="foodservices_menu_for_day">Menu for %s</string>
    <string name="foodservices_menu_lunch">" Lunch "</string>
    <string name="foodservices_menu_dinner">" Dinner "</string>
    <string-array name="foodservices_locations_array">
        <item>@string/foodservices_location_open_now</item>
        <item>@string/foodservices_location_tim_hortons</item>
        <item>@string/foodservices_location_all</item>
    </string-array>
    <string name="week_monday">Monday</string>
    <string name="week_tuesday">Tuesday</string>
    <string name="week_wednesday">Wednesday</string>
    <string name="week_thursday">Thursday</string>
    <string name="week_friday">Friday</string>
    <string name="week_saturday">Saturday</string>
    <string name="week_sunday">Sunday</string>
    <string name="date_picker_week_label">Week of</string>
    <string name="date_picker_year_label">for year</string>
    <string name="menu_watcard_edit_credentials">Add WatCard</string>
    <string name="watcard_editor_title">Edit WatCard Info</string>
    <string name="watcard_editor_student_number">Student Number</string>
    <string name="watcard_editor_pin">PIN</string>
    <string name="course_no_info_available">No course information available for %1$s</string>
    <string name="course_picker_label">Course Subject:</string>
    <string name="course_prerequisites_none">No prerequisites</string>
    <string name="course_capacity">%1$d/%2$d seats filled</string>
    <string name="course_reserve">%1$d/%2$d seats filled for %3$s</string>
    <string name="course_held_with">Held with %1$s</string>
    <string name="course_picker_hint">MATH</string>
    <string name="exam_section">Section %1$s</string>
    <string-array name="course_info_titles">
        <item>Info</item>
        <item>Prerequisites</item>
        <item>Schedule</item>
        <item>Exams</item>
    </string-array>
    <string name="event_news_audience">Open to %s</string>
    <string name="news_published">Published on %s</string>
    <string name="goosewatch_no_nests">No goose nests reported</string>
    <string name="goosewatch_no_title">(No title)</string>
    <string name="goosewatch_last_updated">Last updated %1$s</string>
    <string name="parking_lot_name">Parking Lot %1$s</string>
    <string name="parking_lot_spots_filled">%1$d/%2$d spots filled</string>
    <string name="parking_last_updated">Last updated %1$s</string>
    <string-array name="sunshine_list_sort">
        <item>Salary: High to Low</item>
        <item>Salary: Low to High</item>
        <item>First Name</item>
        <item>Last Name</item>
    </string-array>
    <string name="open_classroom_dialog_title">"Note"</string>
    <string name="open_classroom_dialog_message">"The open classroom timetable is based on the normal lecture and tutorial schedule for today.\n\nIndividual rooms may be unavailable due to exams or other special events of which the app is not aware."</string>
    <string name="open_classroom_no_results">"No open classrooms were found for this building at this time today."</string>
    <string name="open_classroom_calendar_button">"Calendar Button"</string>
    <string-array name="reddit_sort_options">
        <item>Hot</item>
        <item>Top</item>
        <item>New</item>
        <item>Controversial</item>
        <item>Rising</item>
    </string-array>
    <string-array name="reddit_time_filter_options">
        <item>Past hour</item>
        <item>Past day</item>
        <item>Past week</item>
        <item>Past month</item>
        <item>Past year</item>
        <item>All time</item>
    </string-array>
    <string name="important_dates_dialog_title">"Note"</string>
    <string name="important_dates_no_results">"There are no important dates to display."</string>
    <string name="allDates_checkbox">View all Dates</string>
    <string name="reddit_watch_content">Watch</string>
    <string name="reddit_view_content">View</string>
    <string name="reddit_open_content">Open</string>
    <string name="reddit_no_results">No posts were found.</string>
    <string name="building_no_location_data">No location data for this building</string>
    <string name="menu_poi_layers">Layers</string>
    <string name="poi_layers_select_all">Select All</string>
    <string name="poi_layers_deselect_all">Deselect All</string>
    <string name="poi_layers_atms">ATMs</string>
    <string name="poi_layers_greyhound">Greyhound</string>
    <string name="poi_layers_photospheres">Photospheres</string>
    <string name="poi_layers_helplines">Helplines</string>
    <string name="poi_layers_libraries">Libraries</string>
    <string name="poi_layers_defibrillators">Defibrillators</string>
    <string name="map_type_satellite">Satellite</string>
    <string name="map_type_hybrid">Hybrid</string>
    <string name="map_type_road_map">Road Map</string>
    <string-array name="map_types">
        <item>@string/map_type_satellite</item>
        <item>@string/map_type_hybrid</item>
        <item>@string/map_type_road_map</item>
    </string-array>
    <string name="duration_instant">Right now</string>
    <string name="duration_until">In</string>
    <string name="duration_ago">ago</string>
    <string name="feedback_name">Name</string>
    <string name="feedback_input">Feedback</string>
    <string name="feedback_email">Email</string>
    <string name="name_hint">Name</string>
    <string name="input_hint">Feedback goes here!</string>
</resources>