<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/map_type_spinner"
        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/map_types"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/poi_layers_select_all"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/poi_layers_select_all"
        android:textStyle="bold"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/poi_layers_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical">

            <RelativeLayout style="@style/LayerParent">

                <CheckedTextView
                    android:id="@+id/poi_layers_atm_label"
                    style="@style/LayerLabel"
                    android:drawableStart="@drawable/ic_local_atm"
                    android:text="@string/poi_layers_atms" />

                <CheckBox
                    android:id="@+id/poi_layers_atm_check"
                    style="@style/LayerCheckBox" />

            </RelativeLayout>

            <RelativeLayout style="@style/LayerParent">

                <CheckedTextView
                    android:id="@+id/poi_layers_greyhound_label"
                    style="@style/LayerLabel"
                    android:drawableStart="@drawable/ic_directions_bus"
                    android:text="@string/poi_layers_greyhound" />

                <CheckBox
                    android:id="@+id/poi_layers_greyhound_check"
                    style="@style/LayerCheckBox" />

            </RelativeLayout>

            <RelativeLayout
                style="@style/LayerParent"
                android:visibility="gone">

                <CheckedTextView
                    android:id="@+id/poi_layers_photosphere_label"
                    style="@style/LayerLabel"
                    android:drawableStart="@drawable/ic_poi_photosphere"
                    android:text="@string/poi_layers_photospheres" />

                <CheckBox
                    android:id="@+id/poi_layers_photosphere_check"
                    style="@style/LayerCheckBox" />

            </RelativeLayout>

            <RelativeLayout style="@style/LayerParent">

                <CheckedTextView
                    android:id="@+id/poi_layers_helplines_label"
                    style="@style/LayerLabel"
                    android:drawableStart="@drawable/ic_poi_alert"
                    android:text="@string/poi_layers_helplines" />

                <CheckBox
                    android:id="@+id/poi_layers_helplines_check"
                    style="@style/LayerCheckBox" />

            </RelativeLayout>

            <RelativeLayout style="@style/LayerParent">

                <CheckedTextView
                    android:id="@+id/poi_layers_libraries_label"
                    style="@style/LayerLabel"
                    android:drawableStart="@drawable/ic_poi_library"
                    android:text="@string/poi_layers_libraries" />

                <CheckBox
                    android:id="@+id/poi_layers_libraries_check"
                    style="@style/LayerCheckBox" />

            </RelativeLayout>

            <RelativeLayout style="@style/LayerParent">

                <CheckedTextView
                    android:id="@+id/poi_layers_defibrillators_label"
                    style="@style/LayerLabel"
                    android:drawableStart="@drawable/ic_poi_defibrillator"
                    android:text="@string/poi_layers_defibrillators" />

                <CheckBox
                    android:id="@+id/poi_layers_defibrillators_check"
                    style="@style/LayerCheckBox" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
