<!-- <?xml version="1.0" encoding="utf-8"?> -->
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_fb_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarfeedback"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_feedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginEnd="16dp"
            app:expandedTitleMarginStart="16dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                style="@style/ToolbarStyle"
                app:titleTextColor="@color/uw_yellow"
                app:subtitleTextColor="@color/uw_yellow" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="862dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="854dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_input" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/feedback_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/input_hint"
                        android:inputType="textMultiLine" />
                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_name" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/feedback_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/feedback_email" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/feedback_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/name_hint"
                        android:inputType="textEmailAddress" />
                </android.support.design.widget.TextInputLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <!-- android:layout_marginRight="8dp" -->
                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fb_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_submit"
                    app:elevation="6dp"
                    app:fabSize="normal"
                    app:layout_anchor="@id/appbar"
                    app:layout_anchorGravity="bottom|right|end"
                    app:pressedTranslationZ="12dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <io.github.wztlei.wathub.ui.view.FaqSection
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/feedbackinfo1" />

                <io.github.wztlei.wathub.ui.view.FaqSection
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/feedbackinfo2" />

                <io.github.wztlei.wathub.ui.view.FaqSection
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/feedbackinfo3" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>